<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/cardview_shadow_start_color"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_icon_default"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_launcher_foreground"
                />
            <ImageView
                android:id="@+id/selected_icon"
                android:visibility="gone"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_checked"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/app_modify"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                >
                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textSize="24sp"
                    android:singleLine="true"
                    android:text="@string/app_name_default"
                    />
                <TextView
                    android:id="@+id/app_package"
                    android:layout_width="match_parent"
                    android:textSize="18dp"
                    android:singleLine="true"
                    android:layout_height="25dp"
                    android:text="@string/package_default"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/system_label"
                android:layout_width="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:singleLine="true"
                android:layout_height="18dp"
                android:textColor="#FF0000"
                android:text="System"
                />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/list_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="service"/>
    </LinearLayout>
</LinearLayout>