<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.BackgroundManager.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.BackgroundManager.PopupOverlay">
            <TextView
                android:id="@+id/app_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp" />
            <LinearLayout
                android:id="@+id/search_bar"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/close_search_bar_btn"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/hide_search_bar"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_arrow_back"
                    />
                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:iconifiedByDefault="false"
                    android:queryHint="Search"
                    android:imeOptions="actionSearch"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    app:actionViewClass="androidx.appcompat.widget.SearchView"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/select_options_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/close_select_options_bar"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/hide_search_bar"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_arrow_back"
                    />
                <TextView
                    android:id="@+id/amount_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/default_zero"
                    />
                <ImageButton
                    android:id="@+id/select_all"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/hide_search_bar"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_select_all"
                    />
                <ImageButton
                    android:id="@+id/deselect_all"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/hide_search_bar"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_deselect"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_app"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb"
        android:scrollbarDefaultDelayBeforeFade="10"
        />
</LinearLayout>